@@ -1,0 +1,45 @@
+#
+# Makefile gnucobol/tests/cobol85/$module
+#
+# Copyright (C) 2003-2012, 2015-2017 Free Software Foundation, Inc.
+# Written by Keisuke Nishida, Roger While, Simon Sobisch
+#
+# This file is part of GnuCOBOL.
+#
+# The GnuCOBOL compiler is free software: you can redistribute it
+# and/or modify it under the terms of the GNU General Public License
+# as published by the Free Software Foundation, either version 3 of the
+# License, or (at your option) any later version.
+#
+# GnuCOBOL is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with GnuCOBOL.  If not, see <http://www.gnu.org/licenses/>.
+
+# targets that are only logical targets instead of files
+.PHONY: test diff test-O
+
+all:
+	@$(MAKE) test
+	@$(MAKE) diff
+#	@$(MAKE) test-O
+#	@$(MAKE) diff
+	@echo
+
+test:
+	@echo
+	@echo "Performing tests for module directory ##MODULE##"
+	@. ../../atconfig && . ../../atlocal NIST_$@ && perl ##COB85DIR##/report.pl
+
+diff:
+	@echo
+	@echo "Comparing test results for module directory ##MODULE##"
+	diff ##COB85DIR##/##MODULE##.txt report.txt || true
+
+test-O:
+	@echo
+	@echo "Performing tests (optimized) for module directory ##MODULE##"
+	@. ../../atconfig && . ../../atlocal NIST-O_$@ && perl ##COB85DIR##/report.pl -O
